

h1. Version 7.0.0 (not yet released)

h2. Summary

h2. Details

* Ruby-VPI is now distributed only as a "source gem":http://www.rubygems.org. You can decompress the gem without installing it onto your system by running the command @gem install -i output_directory ruby-vpi-7.0.0.gem@. In addition, you can still obtain the source code directly from the Subversion repository.

* The test generator's templates and the examples have been updated according to the following changes.
** Test runners no longer have to specify the path to Ruby-VPI installation directory. Instead, they simply @require 'ruby-vpi/runner'@. Thus, you can run your tests on any machine with Ruby-VPI without having to know where it is installed.
** Ruby benches now invoke @RubyVPI.init_bench@ instead of @require 'bench'; setup_bench@ to become initialized.

* All Ruby libraries in the @lib/@ directory have been moved into @lib/ruby-vpi/@ to prevent load-path clashes with other gems. You should access these libraries by prefixing their path with "ruby-vpi". For example, @require 'vpi_util'@ should now be written as @require 'ruby-vpi/vpi_util'@.

* Incorrect spelling of GPL Cver (v should be uncapitalized) has been fixed.
* Incorrect link to GPL Cver website has been fixed.

h1. Version 6.3.0 (2006-08-27)

h2. Summary

This release adds support for the GPL Cver simulator, provides both binary and source packages, and explicitly defines the version numbering system.

h2. Details

* The GPL Cver simulator is now supported.

* Ruby-VPI now only needs to be built once.
** You can run tests with different Verilog simulators without having to re-compile Ruby-VPI.
** Release packages are now available in both source and binary form.

* The RSpec based specifications for the counter example now use the @should_equal@ instead of the @should_be@ assertion, because the latter ensures strict equivalence. For instance, it will fail when a Fixnum is compared to a Bignum.
